--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,17 @@
-/wave/
-/obj_dir/*
-/.vscode/*
-/logs/*
-/picture/*
-test.*
-*.out
-./*.cpp
-./*.txt
-__pycache__/
-*.hex
+art/
+csrc/
+logs/
+nWaveLog/
+Performance_Modeling/
+simv.daidir/
+TVM/
+wave/
+count.py
+*.txt
+novas_dump.log
+novas.conf
+novas.rc
 simv
 ucil.key
-csrc
-simv.daidir/
-novas_dump.log
+
+
